Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2647

Fix FLOW event processing in send-abort example.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.37.0
    • proton-c-0.38.0
    • proton-c
    • None

    Description

      The current send-abort example program relies on a cadence of FLOW events, some self generated and some originating from the peer.  This cadence can be disrupted by the timing of frames at each peer.  They can also be disrupted by additional self generated FLOW frames in the case of smaller max-frame-size configurations which may be chunked between event batches.

      The program can be made deterministic by not counting FLOW events but by checking the actual state change that may be expected with a FLOW event.

       

      Attachments

        Activity

          People

            cliffjansen Clifford Jansen
            cliffjansen Clifford Jansen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: