PROTON-2647: make send-abort example handle variations in number of FLOW events